<resources>
    <string name="app_name">Roeselarevrijwilligt</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="my_profile">This will lead you to the website. Do you want to continue? </string>
    <string name="yes">Yes</string>
    <string name="cancel">cancel</string>

    <string name="Login">Login</string>

    <string name="Password">Password</string>

    <string name="drawer_open">Open Navigation Drawer</string>
    <string name="drawer_close">Close Navigation Drawer</string>

    <string name="About">About</string>
    <string name="Volunteer">Volunteer</string>
    <string name="About_us">About us</string>
    <string name="Matched_vacancies">Matched Vacancies</string>

    <string-array name="nav">
        <item>My profile</item>
        <item>Volunteer</item>
        <item>About</item>
    </string-array>
    <string name="title_activity_navigation_drawer">NavigationDrawerActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="Roeselarevrifwilligt">Roeselarevrifwilligt</string>
    <string name="Terms_of_Engagement">Terms of Engagement</string>
    <string name="Info_on_volunteering">Info on Volunteering</string>
    <string name="Partners">Partners</string>
    <string name="Slogan">Meaningfull volunteering work</string>

    <string name="app_label">Search</string>
    <string name="search_hint">Search</string>
    <string name="info_volunteering_header">WAT IS VRIJWILLIGEN IN ROESELARE?</string>
    <string name="info_volunteerin_first">Vrijwilligerswerk is een verhaal van mensen. Geëngageerde mensen. Mensen met een groot hart. Mensen die zich belangeloos en vrijblijvend inzetten voor elkaar...</string>
    <string name="wat_is_vrijwilligen">Wat is Vrijwilligen</string>
    <string name="test_activity">Test Activity</string>
    <string name="logout">Log Out</string>
</resources>
