<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@color/RoeslaGreen"
    android:weightSum="1"
    android:clickable="true">


<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/Info_on_volunteering"
    android:textAlignment="center"
    android:textSize="30sp"
    android:textStyle="normal|bold" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:background="@drawable/roundcorner"
        android:layout_marginTop="@dimen/activity_vertical_margin">

        <TextView
            android:text="@string/info_volunteering_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:id="@+id/info_header"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />


        <TextView
            android:layout_marginTop="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/info_text_1"
            android:text="@string/info_volunteerin_first"

            />


        <Button
            android:text="Read more"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/search_linear_persons"
            android:id="@+id/info_buttonfirst"
            android:layout_gravity="center"

            />



    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:background="@drawable/roundcorner"
        android:layout_marginTop="@dimen/activity_vertical_margin">

        <TextView
            android:text="@string/info_volunteering_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:id="@+id/info_header2"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />


        <TextView
            android:layout_marginTop="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/info_text_2"
            android:text="@string/info_volunteerin_first"

            />


        <Button
            android:text="Read more"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/search_linear_persons"
            android:id="@+id/info_buttonsecond"
            android:layout_gravity="center"

            />



    </LinearLayout>

</LinearLayout>